change title for all pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Financial App MockUp</title>
+  <title>Overview | Home Finance App</title>
   <meta charset="utf-8">
   <style>
     /* Dropdown Button */
