--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Financial App MockUp</title>
+  <title>Login | Home Finance App</title>
   <meta charset="utf-8">
   <style>
     /* Dropdown Button */
