--- a/notifications.html
+++ b/notifications.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Notifications</title>
+  <title>Notifications | Home Finance App</title>
+  <meta charset="utf-8">
+
 
     <style>
         /* Dropdown Button */
