--- a/income.html
+++ b/income.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-
 <head>
-    <title>Income</title>
+  <title>Income | Home Finance App</title>
+  <meta charset="utf-8">
     <style>
         /* Dropdown Button */
 
