updated changed titles to match all

--- a/taxDeductions.html
+++ b/taxDeductions.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
+  <title>Tax Deductions | Home Finance App</title>
+  <meta charset="utf-8">
   <style>
     /* Dropdown Button */
 
