--- a/expenses.html
+++ b/expenses.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Overview | Home Finance App</title>
+  <title>Expenses | Home Finance App</title>
   <meta charset="utf-8">
 
 <style>
