--- a/notifications.html
+++ b/notifications.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<body bgcolor="#E6E6FH">
 
 <head>
   <title>Notifications | Home Finance App</title>
@@ -69,9 +70,9 @@
         }
 
         .button1 {
-            background-color: #4CAF50;
+            background-color: #f44336;
             color: black;
-            border: 2px solid #4CAF50;
+            border: 2px solid #f44336;
         }
 
         .button1:hover {
@@ -80,9 +81,9 @@
         }
 
         .button2 {
-            background-color: #4CAF50;
+            background-color: #f44336;
             color: black;
-            border: 2px solid #4CAF50;
+            border: 2px solid #f44336;
         }
 
         .button2:hover {
@@ -91,9 +92,9 @@
         }
 
         .button3 {
-            background-color: #aaaaaa;
+            background-color: #4CAF50;
             color: black;
-            border: 2px solid #aaaaaa;
+            border: 2px solid #4CAF50;
         }
 
         .button3:hover {
@@ -102,9 +103,9 @@
         }
 
         .button4 {
-            background-color: #aaaaaa;
+            background-color: #4CAF50;
             color: black;
-            border: 2px solid #aaaaaa;
+            border: 2px solid #4CAF50;
         }
 
         .button4:hover {
@@ -124,9 +125,9 @@
         }
 
         .button6 {
-            background-color: #f44336;
+            background-color: #aaaaaa;
             color: black;
-            border: 2px solid #f44336;
+            border: 2px solid #aaaaaa;
         }
 
         .button6:hover {
@@ -163,27 +164,27 @@
     <center>
         <br>
         <button class="button button1">
-            <left>Bill</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Date Paid</button>
+            <left>Cable </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Past Due</button>
         <br>
         <button class="button button2">
-            <left>Bill</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Date Paid</button>
+            <left>Electr</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Past Due</button>
         <br>
         <button class="button button3">
-            <left>Bill</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Date Paid</button>
+            <left>WaterB</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            10 Days</button>
         <br>
         <button class="button button4">
-            <left>Bill</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Date Paid</button>
+            <left>Car No  </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            13 Days</button>
         <br>
         <button class="button button5">
-            <left>Bill</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Date Paid</button>
         <br>
         <button class="button button6">
-            <left>Bill</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Date Paid</button>
     </center>
 
