linked the sign out button back to the login page

--- a/savings.html
+++ b/savings.html
@@ -68,7 +68,7 @@
 			<a href="taxChart.html">Tax Chart</a>
 			<a href="notifications.html">Notifications</a>
 			<a href="security.html">Security</a>
-			<a href="signOut.html">Sign Outy</a>
+			<a href="login.html">Sign Outy</a>
 		</div>
 	</div>
 
