no major changes yet

--- a/income.html
+++ b/income.html
@@ -77,35 +77,41 @@
 
     <!-- Income 1 -->
     <center>
+
+
         <div class="income1Title">
             <label for="url">Income 1</label>
             <class="income1Field">
-                <input name="Income 1" type="number" maxlength="8">
+                <input id="Income 1" type="number" maxlength="8">
             </class="income1Field">
 
             <class="submitButton1">
-                <input name="submitButton1" type="submit">
+                <input id="submitButton1" type="submit">
             </class="submitButton1">
         </div>
-    </center>
 
     <br>
     <br>
 
     <!-- Income 2 -->
-    <center>
         <div class="income2Title">
             <label for="url">Income 2</label>
             <class="income1Field">
-                <input name="Income 2" type="number" maxlength="8">
+                <input id="Income 2" type="number" maxlength="8">
                 <class="submitButton2">
-                    <input name="submitButton2" type="submit">
+                    <input id="submitButton2" type="submit">
                 </class="submitButton2">
-
         </div>
+
+
     </center>
 
     <br>
+
+
+
+
+
     <br>
 
     <!-- Add Additonal Income -->
