Linked login to index and reduced menu on login

--- a/login.html
+++ b/login.html
@@ -58,14 +58,7 @@
   <div class="dropdown">
     <button class="dropbtn">Menu</button>
     <div class="dropdown-content">
-      <a href="index.html">Home</a>
-      <a href="income.html">Income</a>
-      <a href="savings.html">Savings</a>
-      <a href="expenses.html">Expenses</a>
-      <a href="taxDeductions.html">Tax Deductions</a>
-      <a href="taxChart.html">Tax Chart</a>
-      <a href="notifications.html">Notifications</a>
-      <a href="security.html">Security</a>
+      <a href="signOut.html">Sign Out</a>
       
     </div>
   </div>
@@ -225,7 +218,8 @@ span.psw {
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
         
-      <button type="submit">Login</button>
+      <!-- <button type="submit">Login</button> -->
+      <div id="button"><a href="index.html">Login</a></div>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
       </label>
