--- a/signOut.html
+++ b/signOut.html
@@ -1,70 +1,86 @@
 <!DOCTYPE html>
+
 <body bgcolor="#E6E6FH">
-<head>
-  <title>Sign Out | Home Finance App</title>
-  <meta charset="utf-8">
-    <style>
-        /* Dropdown Button */
 
-        .dropbtn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 16px;
-            font-size: 16px;
-            border: none;
-        }
+    <head>
+        <title>Sign Out | Home Finance App</title>
+        <meta charset="utf-8">
+        <style>
+            /* Dropdown Button */
 
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
+            .dropbtn {
+                background-color: #4CAF50;
+                color: white;
+                padding: 16px;
+                font-size: 16px;
+                border: none;
+            }
 
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
+            .dropdown {
+                position: relative;
+                display: inline-block;
+            }
 
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #f1f1f1;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+                z-index: 1;
+            }
 
-        .dropdown-content a:hover {
-            background-color: #ddd
-        }
+            .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
 
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
+            .dropdown-content a:hover {
+                background-color: #ddd
+            }
 
-        .dropdown:hover .dropbtn {
-            background-color: #3e8e41;
-        }
+            .dropdown:hover .dropdown-content {
+                display: block;
+            }
 
-        /*End menu*/
-    </style>
-</head>
+            .dropdown:hover .dropbtn {
+                background-color: #3e8e41;
+            }
 
-<body>
-    <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-            <a href="login.html">Login</a>
-        </div>            
-    </div>
-    
-    <center>
-      <h1> Thanks for choosing the Home Finance App!
-          <br>
-          <hr>
-      </h1>
-    </center>
+            /*End menu*/
+
+            button {
+                background-color: #4CAF50;
+                color: white;
+                padding: 14px 20px;
+                margin: 12px 0;
+                border: none;
+                cursor: pointer;
+                width: 100%;
+            }
+        </style>
+    </head>
+
+    <body>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="login.html">Login</a>
+            </div>
+        </div>
+
+        <center>
+            <h1> Are you sure you want to sign out?
+                <br>
+                <hr>
+                <a href="login.html"><button>Yes</button></a>
+
+                <a href="index.html"><button>Cancel</button></a>
+
+            </h1>
+        </center>
 
 
-</body>
+    </body>
