--- a/signOut.html
+++ b/signOut.html
@@ -63,13 +63,13 @@
         </style>
     </head>
 
-    <body>
+    <!-- <body>
         <div class="dropdown">
             <button class="dropbtn">Menu</button>
             <div class="dropdown-content">
                 <a href="login.html">Login</a>
             </div>
-        </div>
+        </div> -->
 
         <center>
             <h1> Are you sure you want to sign out?
