--- a/notifications.html
+++ b/notifications.html
@@ -1,191 +1,199 @@
 <!DOCTYPE html>
+
 <body bgcolor="#E6E6FH">
 
-<head>
-  <title>Notifications | Home Finance App</title>
-  <meta charset="utf-8">
+    <head>
+        <title>Notifications | Home Finance App</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
-    <style>
-        /* Dropdown Button */
+        <style>
+            /* Dropdown Button */
 
-        .dropbtn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 16px;
-            font-size: 16px;
-            border: none;
-        }
+            .dropbtn {
+                background-color: #4CAF50;
+                color: white;
+                padding: 16px;
+                font-size: 16px;
+                border: none;
+            }
 
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
+            .dropdown {
+                position: relative;
+                display: inline-block;
+            }
 
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                background-color: #f1f1f1;
+                min-width: 160px;
+                box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+                z-index: 1;
+            }
 
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
+            .dropdown-content a {
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+            }
 
-        .dropdown-content a:hover {
-            background-color: #ddd
-        }
+            .dropdown-content a:hover {
+                background-color: #ddd
+            }
 
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
+            .dropdown:hover .dropdown-content {
+                display: block;
+            }
 
-        .dropdown:hover .dropbtn {
-            background-color: #3e8e41;
-        }
+            .dropdown:hover .dropbtn {
+                background-color: #3e8e41;
+            }
 
-        /*End menu*/
+            /*End menu*/
 
-        .button {
-            background-color: #4CAF50;
-            /* Green */
-            border: none;
-            color: white;
-            padding: 16px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            -webkit-transition-duration: 0.4s;
-            /* Safari */
-            transition-duration: 0.4s;
-            cursor: pointer;
-        }
+            .button {
+                background-color: #4CAF50;
+                /* Green */
+                border: none;
+                color: white;
+                padding: 16px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                -webkit-transition-duration: 0.4s;
+                /* Safari */
+                transition-duration: 0.4s;
+                cursor: pointer;
+            }
 
-        .button1 {
-            background-color: #f44336;
-            color: black;
-            border: 2px solid #f44336;
-        }
+            .button1 {
+                background-color: #f44336;
+                color: black;
+                border: 2px solid #f44336;
+            }
 
-        .button1:hover {
-            background-color: white;
-            color: black;
-        }
+            .button1:hover {
+                background-color: white;
+                color: black;
+            }
 
-        .button2 {
-            background-color: #f44336;
-            color: black;
-            border: 2px solid #f44336;
-        }
+            .button2 {
+                background-color: #f44336;
+                color: black;
+                border: 2px solid #f44336;
+            }
 
-        .button2:hover {
-            background-color: white;
-            color: black;
-        }
+            .button2:hover {
+                background-color: white;
+                color: black;
+            }
 
-        .button3 {
-            background-color: #4CAF50;
-            color: black;
-            border: 2px solid #4CAF50;
-        }
+            .button3 {
+                background-color: #4CAF50;
+                color: black;
+                border: 2px solid #4CAF50;
+            }
 
-        .button3:hover {
-            background-color: white;
-            color: black;
-        }
+            .button3:hover {
+                background-color: white;
+                color: black;
+            }
 
-        .button4 {
-            background-color: #4CAF50;
-            color: black;
-            border: 2px solid #4CAF50;
-        }
+            .button4 {
+                background-color: #4CAF50;
+                color: black;
+                border: 2px solid #4CAF50;
+            }
 
-        .button4:hover {
-            background-color: white;
-            color: black;
-        }
+            .button4:hover {
+                background-color: white;
+                color: black;
+            }
 
-        .button5 {
-            background-color: #aaaaaa;
-            color: black;
-            border: 2px solid #aaaaaa;
-        }
+            .button5 {
+                background-color: #aaaaaa;
+                color: black;
+                border: 2px solid #aaaaaa;
+            }
 
-        .button5:hover {
-            background-color: white;
-            color: black;
-        }
+            .button5:hover {
+                background-color: white;
+                color: black;
+            }
 
-        .button6 {
-            background-color: #aaaaaa;
-            color: black;
-            border: 2px solid #aaaaaa;
-        }
+            .button6 {
+                background-color: #aaaaaa;
+                color: black;
+                border: 2px solid #aaaaaa;
+            }
 
-        .button6:hover {
-            background-color: white;
-            color: black;
-        }
-    </style>
+            .button6:hover {
+                background-color: white;
+                color: black;
+            }
+        </style>
 
-</head>
+    </head>
 
-<body>
-    <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="income.html">Income</a>
-            <a href="savings.html">Savings</a>
-            <a href="expenses.html">Expenses</a>
-            <a href="taxDeductions.html">Tax Deductions</a>
-            <a href="taxChart.html">Tax Chart</a>
-            <a href="notifications.html">Notifications</a>
-            <a href="security.html">Security</a>
-            <a href="signOut.html">Sign Out</a>
+    <body>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="income.html">Income</a>
+                <a href="savings.html">Savings</a>
+                <a href="expenses.html">Expenses</a>
+                <a href="taxDeductions.html">Tax Deductions</a>
+                <a href="taxChart.html">Tax Chart</a>
+                <a href="notifications.html">Notifications</a>
+                <a href="security.html">Security</a>
+                <a href="signOut.html">Sign Out</a>
+            </div>
         </div>
-    </div>
 
-    <center>
-        <h1> Notifications
+        <center>
+            <h1> Notifications
+                <br>
+            </h1>
+        </center>
+        <hr>
+
+        <center>
             <br>
-        </h1>
-    </center>
-    <hr>
+            <button class="button button1">
+                <left>Cable </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Past Due</button>
+            <br>
+            <button class="button button2">
+                <left>Electr</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Past Due</button>
+            <br>
+            <button class="button button3">
+                <left>WaterB</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                10 Days</button>
+            <br>
+            <button class="button button4">
+                <left>Car No </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                13 Days</button>
+            <br>
+            <button class="button button5">
+                <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Date Paid</button>
+            <br>
+            <button class="button button6">
+                <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Date Paid</button>
+        </center>
 
-    <center>
-        <br>
-        <button class="button button1">
-            <left>Cable </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Past Due</button>
-        <br>
-        <button class="button button2">
-            <left>Electr</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Past Due</button>
-        <br>
-        <button class="button button3">
-            <left>WaterB</left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            10 Days</button>
-        <br>
-        <button class="button button4">
-            <left>Car No  </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            13 Days</button>
-        <br>
-        <button class="button button5">
-            <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Date Paid</button>
-        <br>
-        <button class="button button6">
-            <left>Bill </left> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Date Paid</button>
-    </center>
 
-</body>
+        <div class="w3-container">
+            <button class="w3-button w3-xlarge w3-circle w3-red w3-card-4">+</button>
+        </div>
+
+    </body>
