played with functionality

--- a/income.html
+++ b/income.html
@@ -70,61 +70,29 @@
         <h1> Income
             <br>
         </h1>
-    </center>
+
 
     <hr>
     <br>
 
     <!-- Income 1 -->
-    <center>
+    <form action="/action_page.php">
+    	Income 1: <input type="number" name="income1"><br>
+    	Income 2: <input type="number" name="income2"><br><br>
+    	<input type="submit" value="Submit">
+    </form>
 
-
-        <div class="income1Title">
-            <label for="url">Income 1</label>
-            <class="income1Field">
-                <input id="Income 1" type="number" maxlength="8">
-            </class="income1Field">
-
-            <class="submitButton1">
-                <input id="submitButton1" type="submit">
-            </class="submitButton1">
-        </div>
-
-    <br>
-    <br>
-
-    <!-- Income 2 -->
-        <div class="income2Title">
-            <label for="url">Income 2</label>
-            <class="income1Field">
-                <input id="Income 2" type="number" maxlength="8">
-                <class="submitButton2">
-                    <input id="submitButton2" type="submit">
-                </class="submitButton2">
-        </div>
-
-
-    </center>
-
-    <br>
-
-
-
-
-
-    <br>
 
     <!-- Add Additonal Income -->
-    <center>
-        <button type="button" onClick="addAdditionalIncome()">Add Additional Income</button>
-    </center>
+    <button type="button" onClick="addAdditionalIncome()">Add Additional Income</button>
 
+</center>
 </body>
 
 <script>
 
     function addAdditonalIncome() {
 
-    }
+        }
 
 </script>
