--- a/security.html
+++ b/security.html
@@ -50,6 +50,8 @@
 
   /*End menu*/
 
+  /* Slider Button */
+
   .block {
     display: block;
     width: 25%;
@@ -123,6 +125,63 @@
   .slider.round:before {
     border-radius: 50%;
   }
+
+  /* End of Button Slider */
+
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/* Popup Pin */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
 </style>
 </head>
 
@@ -185,8 +244,17 @@
       Child Children the Child
     </p>
     </br>
+    
+    <script>
+    function myFunction() {
+      var popup = document.getElementById("myPopup");
+      popup.classList.toggle("show");
+    }
+    </script>
 
-    <button class="block" onclick="alert('Currently under production')">Set Up Pin</button>
+    <div class="block" onclick="myFunction()">Set Up Pin
+      
+    </div>
   </center>
 </body>
 
