--- a/about_us.html
+++ b/about_us.html
@@ -88,23 +88,23 @@
 	<br>
 	<br>
 	<br>
-	<center><img src="jim.png" height="250" width="250"></img></center>
+	<center><img src="dwight.jpg" height="250" width="250"></img></center>
 	<br>
 	<center>Jeremiah Anderson, Co-Developer</center>
 	<br>
 	<br>
 	<br>
 	<br>
-	<center><img src="dwight.jpg"</center>
+	<center><img src="jim.png"</center>
 	<br>
 	<br>
 	<center>Jared Houseman, Co-Developer</center>
 	<br>
 	<br>
 	<br>
-	<center><img src="chelsea.jpg"></img></center>
+	<center><img src="pam.png"></img></center>
 	<br>
-	<center>Lindsey Wade, Q-A Tester</center>
+	<center>Lindsey Wade, QA Analyst </center>
 	
 	
 	
