--- a/about_us.html
+++ b/about_us.html
@@ -102,7 +102,7 @@
 	<br>
 	<br>
 	<br>
-	<center><img src="pam.png"></img></center>
+	<center><img src="pam.png" height="250" width="250"></img></center>
 	<br>
 	<center>Lindsey Wade, QA Analyst </center>
 	
