added link to about_us on all pages

--- a/savings.html
+++ b/savings.html
@@ -68,7 +68,9 @@
 			<a href="taxChart.html">Tax Chart</a>
 			<a href="notifications.html">Notifications</a>
 			<a href="security.html">Security</a>
+			<a href="about_us.html">About Us</a>
 			<a href="signOut.html">Sign Out</a>
+
 		</div>
 	</div>
 
