--- a/taxDeductions.html
+++ b/taxDeductions.html
@@ -67,6 +67,7 @@
       <a href="taxChart.html">Tax Chart</a>
       <a href="notifications.html">Notifications</a>
       <a href="security.html">Security</a>
+      <a href="about_us.html">About Us</a>
       <a href="signOut.html">Sign Out</a>
     </div>
   </div>
