--- a/signOut.html
+++ b/signOut.html
@@ -85,11 +85,19 @@
                 <br>
                 <hr>
                 <br>
-                <button class="block" a href="login.html">Yes</button>
-                <button class="block" a href="index.html">Cancel</button>
+                <button class="block" onClick="window.location='login.html'">Yes</button>
+                <button class="block" onClick="window.location='index.html'">Cancel</button>
+
+              
 
             </h1>
         </center>
 
 
     </body>
+
+    <script>
+
+        function yesButton() {
+
+        }
