removed navigation dropdown

--- a/login.html
+++ b/login.html
@@ -56,13 +56,13 @@
   </head>
 
   <body>
-    <div class="dropdown">
+   <!-- <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
-        <a href="signOut.html">Sign Out</a>
+        <a href="about_us.html">About Us</a>
 
       </div>
-    </div>
+    </div> -->
     <center>
       <h1> Welcome to Finance App!
         <br>
@@ -292,11 +292,3 @@
 
   </body>
   </center>
-
-  <script>
-
-    function addAdditonalIncome() {
-
-    }
-
-  </script>
