--- a/login.html
+++ b/login.html
@@ -50,6 +50,23 @@
         background-color: #3e8e41;
       }
 
+      .block {
+        display: block;
+        width: 20%;
+        border: none;
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        text-align: center;
+      }
+
+      .block:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
       /*End menu*/
     </style>
 
@@ -254,13 +271,19 @@
               </label>
               <input type="password" placeholder="Enter Password" name="psw" required>
 
-              <!-- <button type="submit">Login</button> -->
-              <div id="button">
-                <a href="index.html">Login</a>
-              </div>
               <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
               </label>
+
+              <!-- <button type="submit">Login</button> -->
+              <div>
+                <a href="index.html">
+                  <button class="block" onclick="">Submit</button>
+                </a>
+                <!-- <div id="button">
+                <a href="index.html">Login</a> -->
+              </div>
+
             </div>
 
             <div class="container" style="background-color:#f1f1f1">
