--- a/login.html
+++ b/login.html
@@ -67,12 +67,14 @@
       <h1> Welcome to Finance App!
         <br>
       </h1>
+      <hr>
 
-    </center>
+      
+      <img src="bonzai.png" height="400" width="400">
 
-    <hr>
-    <br>
-    <center>
+
+      <br>
+    
 
       <!-- login -->
 
