--- a/login.html
+++ b/login.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-
 <body bgcolor="#E6E6FH">
-
   <head>
-
     <title>Login | Home Finance App</title>
     <meta charset="utf-8">
     <style>
       /* Dropdown Button */
-
       .dropbtn {
         background-color: #4CAF50;
         color: white;
@@ -16,12 +12,10 @@
         font-size: 16px;
         border: none;
       }
-
       .dropdown {
         position: relative;
         display: inline-block;
       }
-
       .dropdown-content {
         display: none;
         position: absolute;
@@ -30,26 +24,21 @@
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
       }
-
       .dropdown-content a {
         color: black;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
       }
-
       .dropdown-content a:hover {
         background-color: #ddd
       }
-
       .dropdown:hover .dropdown-content {
         display: block;
       }
-
       .dropdown:hover .dropbtn {
         background-color: #3e8e41;
       }
-
       .block {
         display: block;
         width: 20%;
@@ -61,23 +50,18 @@
         cursor: pointer;
         text-align: center;
       }
-
       .block:hover {
         background-color: #ddd;
         color: black;
       }
-
       /*End menu*/
     </style>
-
   </head>
-
   <body>
    <!-- <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <a href="about_us.html">About Us</a>
-
       </div>
     </div> -->
     <center>
@@ -85,24 +69,17 @@
         <br>
       </h1>
       <hr>
-
       
       <img src="bonzai.png" height="400" width="400">
-
-
       <br>
     
-
       <!-- login -->
-
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
         body {
           font-family: Arial, Helvetica, sans-serif;
         }
-
         /* Full-width input fields */
-
         input[type=text],
         input[type=password] {
           width: 100%;
@@ -112,9 +89,7 @@
           border: 1px solid #ccc;
           box-sizing: border-box;
         }
-
         /* Set a style for all buttons */
-
         button {
           background-color: #4CAF50;
           color: white;
@@ -124,43 +99,33 @@
           cursor: pointer;
           width: 100%;
         }
-
         button:hover {
           opacity: 0.8;
         }
-
         /* Extra styles for the cancel button */
-
         .cancelbtn {
           width: auto;
           padding: 10px 18px;
           background-color: #f44336;
         }
-
         /* Center the image and position the close button */
-
         .imgcontainer {
           text-align: center;
           margin: 24px 0 12px 0;
           position: relative;
         }
-
         img.avatar {
           width: 40%;
           border-radius: 50%;
         }
-
         .container {
           padding: 16px;
         }
-
         span.psw {
           float: right;
           padding-top: 16px;
         }
-
         /* The Modal (background) */
-
         .modal {
           display: none;
           /* Hidden by default */
@@ -182,9 +147,7 @@
           /* Black w/ opacity */
           padding-top: 60px;
         }
-
         /* Modal Content/Box */
-
         .modal-content {
           background-color: #fefefe;
           margin: 5% auto 15% auto;
@@ -193,9 +156,7 @@
           width: 80%;
           /* Could be more or less, depending on screen size */
         }
-
         /* The Close Button (x) */
-
         .close {
           position: absolute;
           right: 25px;
@@ -204,20 +165,16 @@
           font-size: 35px;
           font-weight: bold;
         }
-
         .close:hover,
         .close:focus {
           color: red;
           cursor: pointer;
         }
-
         /* Add Zoom Animation */
-
         .animate {
           -webkit-animation: animatezoom 0.6s;
           animation: animatezoom 0.6s
         }
-
         @-webkit-keyframes animatezoom {
           from {
             -webkit-transform: scale(0)
@@ -226,7 +183,6 @@
             -webkit-transform: scale(1)
           }
         }
-
         @keyframes animatezoom {
           from {
             transform: scale(0)
@@ -235,9 +191,7 @@
             transform: scale(1)
           }
         }
-
         /* Change styles for span and cancel button on extra small screens */
-
         @media screen and (max-width: 300px) {
           span.psw {
             display: block;
@@ -249,45 +203,35 @@
         }
       </style>
       </head>
-
       <body>
-
         <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-
         <div id="id01" class="modal">
-
           <form class="modal-content animate" action="/action_page.php">
             <div class="imgcontainer">
               <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
               <img src="avatar.png" alt="Avatar" class="avatar">
             </div>
-
             <div class="container">
               <label for="uname">
                 <b>Username</b>
               </label>
               <input type="text" placeholder="Enter Username" name="uname" required>
-
               <label for="psw">
                 <b>Password</b>
               </label>
               <input type="password" placeholder="Enter Password" name="psw" required>
-
               <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
               </label>
-
               <!-- <button type="submit">Login</button> -->
               <div>
                 <a href="index.html">
-                  <button class="block" onclick="">Submit</button>
+                  <button class="block" onclick="window.location='index.html'">Submit</button>
                 </a>
                 <!-- <div id="button">
                 <a href="index.html">Login</a> -->
               </div>
-
             </div>
-
             <div class="container" style="background-color:#f1f1f1">
               <center>
                 <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
@@ -298,11 +242,9 @@
             </div>
           </form>
         </div>
-
         <script>
           // Get the modal
           var modal = document.getElementById('id01');
-
           // When the user clicks anywhere outside of the modal, close it
           window.onclick = function (event) {
             if (event.target == modal) {
@@ -310,10 +252,7 @@
             }
           }
         </script>
-
       </body>
-
       </html>
-
   </body>
   </center>
