--- a/income.html
+++ b/income.html
@@ -1,78 +1,74 @@
 <!DOCTYPE html>
+
 <body bgcolor="#E6E6FH">
-<head>
-  <title>Income | Home Finance App</title>
-  <meta charset="utf-8">
-    <style>
-        /* Dropdown Button */
 
-        .dropbtn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 16px;
-            font-size: 16px;
-            border: none;
-        }
+    <head>
+        <title>Income | Home Finance App</title>
+        <meta charset="utf-8">
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
 
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
+            .sidenav {
+                height: 100%;
+                width: 200px;
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                background-color: #111;
+                overflow-x: hidden;
+                padding-top: 20px;
+            }
 
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
+            .sidenav a {
+                padding: 6px 6px 6px 32px;
+                text-decoration: none;
+                font-size: 20px;
+                color: #818181;
+                display: block;
+            }
 
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
+            .sidenav a:hover {
+                color: #f1f1f1;
+            }
 
-        .dropdown-content a:hover {
-            background-color: #ddd
-        }
+            .main {
+                margin-left: 200px;
+                /* Same as the width of the sidenav */
+            }
 
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
+            @media screen and (max-height: 450px) {
+                .sidenav {
+                    padding-top: 15px;
+                }
+                .sidenav a {
+                    font-size: 18px;
+                }
+            }
 
-        .dropdown:hover .dropbtn {
-            background-color: #3e8e41;
-        }
+            .block {
+                display: block;
+                width: 20%;
+                border: none;
+                background-color: #4CAF50;
+                color: white;
+                padding: 10px 20px;
+                font-size: 16px;
+                cursor: pointer;
+                text-align: center;
+            }
 
-        /*End menu*/
+            .block:hover {
+                background-color: #ddd;
+                color: black;
+            }
+        </style>
+    </head>
 
-    .block {
-        display: block;
-        width: 20%;
-        border: none;
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-    }
-
-    .block:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    </style>
-</head>
-
-<body>
-    <div class="dropdown">
-        <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
+    <body>
+        <div class="sidenav">
             <a href="index.html">Home</a>
             <a href="income.html">Income</a>
             <a href="savings.html">Savings</a>
@@ -81,39 +77,42 @@
             <a href="taxChart.html">Tax Chart</a>
             <a href="notifications.html">Notifications</a>
             <a href="security.html">Security</a>
-            <a href="about_us.html">About Us</a>
             <a href="signOut.html">Sign Out</a>
-
         </div>
-    </div>
-    <center>
-        <h1> Income
-            <br>
-        </h1>
+        <div class="main">
+            <center>
+                <h1> Income
+                    <br>
+                </h1>
 
 
-    <hr>
-    <br>
+                <hr>
+                <br>
 
-    <!-- Income 1 -->
-    <form action="/action_page.php">
-    	Income 1: <input type="number" name="income1"><br>
-    	Income 2: <input type="number" name="income2"><br><br>
-        <button class="block" onclick="">Submit</button>
-    </form>
+                <!-- Income 1 -->
+                <form action="/action_page.php">
+                    Income 1:
+                    <input type="number" name="income1">
+                    <br> Income 2:
+                    <input type="number" name="income2">
+                    <br>
+                    <br>
+                    <button class="block" onclick="">Submit</button>
+                </form>
 
-    <br>
+                <br>
 
-    <!-- Add Additonal Income -->
-    <button class="block" onClick="addAdditionalIncome()">Add Additional Income</button>
+                <!-- Add Additonal Income -->
+                <button class="block" onClick="addAdditionalIncome()">Add Additional Income</button>
 
-</center>
-</body>
+            </center>
+        </div>
+    </body>
 
-<script>
+    <script>
 
-    function addAdditonalIncome() {
+        function addAdditonalIncome() {
 
         }
 
-</script>
+    </script>
