changed nav for tax deductions

--- a/taxDeductions.html
+++ b/taxDeductions.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
+
 <body bgcolor="#E6E6FH">
-<html>
+  <html>
 
 
-<head>
-  <title>Tax Deductions | Home Finance App</title>
-  <meta charset="utf-8">
-  <style>
-    /* Dropdown Button */
+  <head>
+    <title>Tax Deductions | Home Finance App</title>
+    <meta charset="utf-8">
+    <style>
+      body {
+        font-family: "Lato", sans-serif;
+      }
 
-    .dropbtn {
-      background-color: #4CAF50;
-      color: white;
-      padding: 16px;
-      font-size: 16px;
-      border: none;
-    }
+      .sidenav {
+        height: 100%;
+        width: 200px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        padding-top: 20px;
+      }
 
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
+      .sidenav a {
+        padding: 6px 6px 6px 32px;
+        text-decoration: none;
+        font-size: 20px;
+        color: #818181;
+        display: block;
+      }
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f1f1f1;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
+      .sidenav a:hover {
+        color: #f1f1f1;
+      }
 
-    .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
+      .main {
+        margin-left: 200px;
+        /* Same as the width of the sidenav */
+      }
 
-    .dropdown-content a:hover {
-      background-color: #ddd
-    }
+      @media screen and (max-height: 450px) {
+        .sidenav {
+          padding-top: 15px;
+        }
+        .sidenav a {
+          font-size: 18px;
+        }
+      }
+    </style>
+  </head>
+  <title>Tax Deductions</title>
 
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    .dropdown:hover .dropbtn {
-      background-color: #3e8e41;
-    }
-
-    /*End menu*/
-  </style>
-</head>
-<title>Tax Deductions</title>
-
-<body>
-  <div class="dropdown">
-    <button class="dropbtn">Menu</button>
-    <div class="dropdown-content">
+  <body>
+    <div class="sidenav">
       <a href="index.html">Home</a>
       <a href="income.html">Income</a>
       <a href="savings.html">Savings</a>
@@ -67,44 +63,44 @@
       <a href="taxChart.html">Tax Chart</a>
       <a href="notifications.html">Notifications</a>
       <a href="security.html">Security</a>
-      <a href="about_us.html">About Us</a>
       <a href="signOut.html">Sign Out</a>
     </div>
-  </div>
- 
-  <h1>
-    <center> Tax Deductions </center>
-  </h1>
-  <hr>
 
-  <h2>
-    <center> Enter the following information:</center>
-  </h2>
-  <center>
-    <form action="/action_page.php">
-      Please enter tax deductible item:
-      <br>
-      <input type="text" Item Name="itemName" value="I.E Tires">
-      <br>
-      <br>
+    <div class="main">
+      <h1>
+        <center> Tax Deductions </center>
+      </h1>
+      <hr>
 
-      <form action="/action_page.php">
-        Please enter classification of item:
-        <br>
-        <input type="text" Item Name="itemName" value="I.E Business Expense">
-        <br>
-        <br>
-
+      <h2>
+        <center> Enter the following information:</center>
+      </h2>
+      <center>
         <form action="/action_page.php">
-          Please enter total cost of the item:
+          Please enter tax deductible item:
           <br>
-          <input type="text" Item Name="itemName" value="400.95">
+          <input type="text" Item Name="itemName" value="I.E Tires">
           <br>
           <br>
-          <input type="submit" value="Submit">
-        </form>
-        <button type="button" onclick="alert('Currently under production')">Home</button>
-  </center>
-</body>
 
-</html>
+          <form action="/action_page.php">
+            Please enter classification of item:
+            <br>
+            <input type="text" Item Name="itemName" value="I.E Business Expense">
+            <br>
+            <br>
+
+            <form action="/action_page.php">
+              Please enter total cost of the item:
+              <br>
+              <input type="text" Item Name="itemName" value="400.95">
+              <br>
+              <br>
+              <input type="submit" value="Submit">
+            </form>
+            <button type="button" onclick="alert('Currently under production')">Home</button>
+      </center>
+    </div>
+  </body>
+
+  </html>
