Set up security user prompt for pin

--- a/security.html
+++ b/security.html
@@ -248,6 +248,14 @@
     
     <script>
     function myFunction() {
+      var txt;
+    var person = prompt("Please enter a pin:", "EG 1234");
+    if (person == null || person == "") {
+        txt = "User cancelled the prompt.";
+    } else {
+        txt = "Hello " + person + "! How are you today?";
+    }
+    document.getElementById("demo").innerHTML = txt;
     }
     </script>
 
