--- a/taxChart.html
+++ b/taxChart.html
@@ -125,14 +125,30 @@
 
       <br>
       <br>
+
+
+
       <center>
-        <button type="button" onclick="alert('Currently under production')">Save W-2 Statement</button>
-        <button type="button" onclick="alert('Currently under production')">Save Picture of receipt</button>
+        <input type="file" id="fileElem" multiple accept="image/*" style="display:none" onchange="handleFiles(this.files)">
+        <button type = "button" onclick="myFunction()" id = "fileSelect">Save W-2 or Receipts</button>
         <br>
         <br>
         <br>
         <button type="button" onclick="alert('Currently under production')">View Saved Images</button>
-        <button type="button" onclick="alert('Currently under production')">Home</button>
+
+        <script>
+function myFunction() {
+  //document.getElementById('fileid').click()
+  var fileSelect = document.getElementById("fileSelect"),
+  fileElem = document.getElementById("fileSelect");
+
+fileSelect.addEventListener("click", function (x) {
+  if (fileElem) {
+    fileElem.click();
+  }
+}, false);
+}
+</script>
 
       </center>
 
