--- a/savings.html
+++ b/savings.html
@@ -126,7 +126,7 @@ var chart = new CanvasJS.Chart("chartContainer", {
 	animationEnabled: true,
 	theme: "light1", // "light1", "light2", "dark1", "dark2"
 	title:{
-		text: "Savings By Month"
+		text: ""
 	},
 	axisY: {
 		title: "US dollars ($)"
