Added links to the about us page

--- a/expenses.html
+++ b/expenses.html
@@ -3,6 +3,11 @@
 <body bgcolor="#E6E6FH">
 
     <head>
+        <center>
+                    <h1> Expenses
+                        <br>
+                    </h1>
+                </center>
         <title>Expenses | Home Finance App</title>
         <meta charset="utf-8">
 
@@ -52,13 +57,13 @@
             label {
                 width: 180px;
                 clear: left;
-                text-align: left;
+                text-align: center;
                 padding-right: 10px;
             }
 
             input,
             label {
-                float: left;
+                float: center;
             }
 
             .block {
@@ -89,14 +94,11 @@
                 <a href="taxChart.html">Tax Chart</a>
                 <a href="notifications.html">Notifications</a>
                 <a href="security.html">Security</a>
+                <a href="about_us.html">About Us</a>
                 <a href="signOut.html">Sign Out</a>
             </div>
             <div class="main">
-                <center>
-                    <h1> Expenses
-                        <br>
-                    </h1>
-                </center>
+                
                 <center>
                     <form>
                         <label for="Utilities">Utilities</label>
