Administrators spelled incorrectly

--- a/security.html
+++ b/security.html
@@ -212,7 +212,7 @@
   <center>
     <div>
       <center>
-        <h2>Administators</h2>
+        <h2>Administrators</h2>
       </center>
     </div>
 
