Fixed Navigation to Home Page

--- a/FinanceTreeAngular/src/index.html
+++ b/FinanceTreeAngular/src/index.html
@@ -226,7 +226,7 @@
               <!-- <button type="submit">Login</button> -->
               <div>
                 <a href="home.html">
-                  <button class="block" onclick="window.location='index.html'">Submit</button>
+                  <button class="block" onclick="window.location='home.html'">Submit</button>
                 </a>
                 <!-- <div id="button">
                 <a href="index.html">Login</a> -->
