--- a/FinanceTreeAngular/src/taxChart.html
+++ b/FinanceTreeAngular/src/taxChart.html
@@ -113,7 +113,7 @@
           <td>199.99</td>
         </tr>
         <tr>
-          <td>House Taces</td>
+          <td>House Taxes</td>
           <td>State Taxes</td>
           <td>2000.59</td>
         </tr>
