--- a/FinanceTreeAngular/src/index.html
+++ b/FinanceTreeAngular/src/index.html
@@ -65,7 +65,7 @@
       </div>
     </div> -->
     <center>
-      <h1> Welcome to Finance App!
+      <h1> Welcome to Finance Tree!
         <br>
       </h1>
       <hr>
