bugs on home page

--- a/taxChart.html
+++ b/taxChart.html
@@ -140,7 +140,7 @@
 function myFunction() {
   //document.getElementById('fileid').click()
   var fileSelect = document.getElementById("fileSelect"),
-  fileElem = document.getElementById("fileSelect");
+  fileElem = document.getElementById("fileElem");
 
 fileSelect.addEventListener("click", function (x) {
   if (fileElem) {
