Added Help Page

--- a/FinanceTreeAngular/src/about_us.html
+++ b/FinanceTreeAngular/src/about_us.html
@@ -48,16 +48,17 @@
 	</head>
 <body>
   <div class="sidenav">
-      <a href="home.html">Home</a>
-      <a href="income.html">Income</a>
-      <a href="savings.html">Savings</a>
-      <a href="expenses.html">Expenses</a>
-      <a href="taxDeductions.html">Tax Deductions</a>
-      <a href="taxChart.html">Tax Chart</a>
-      <a href="notifications.html">Notifications</a>
-      <a href="security.html">Security</a>
-      <a href="about_us.html">About Us</a>
-      <a href="signOut.html">Sign Out</a>
+	<a href="home.html">Home</a>
+	<a href="income.html">Income</a>
+	<a href="savings.html">Savings</a>
+	<a href="expenses.html">Expenses</a>
+	<a href="taxDeductions.html">Tax Deductions</a>
+	<a href="taxChart.html">Tax Chart</a>
+	<a href="notifications.html">Notifications</a>
+	<a href="security.html">Security</a>
+	<a href="about_us.html">About Us</a>
+	<a href="Help.html">Help</a>
+	<a href="signOut.html">Sign Out</a>
     </div>
   </div>
   
