--- a/FinanceTreeAngular/src/savings.html
+++ b/FinanceTreeAngular/src/savings.html
@@ -60,15 +60,16 @@
 		<div id="mySidenav" class="sidenav">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a href="home.html">Home</a>
-			<a href="income.html">Income</a>
-			<a href="savings.html">Savings</a>
-			<a href="expenses.html">Expenses</a>
-			<a href="taxDeductions.html">Tax Deductions</a>
-			<a href="taxChart.html">Tax Chart</a>
-			<a href="notifications.html">Notifications</a>
-			<a href="security.html">Security</a>
-			<a href="about_us.html">About Us</a>
-			<a href="signOut.html">Sign Out</a>
+      <a href="income.html">Income</a>
+      <a href="savings.html">Savings</a>
+      <a href="expenses.html">Expenses</a>
+      <a href="taxDeductions.html">Tax Deductions</a>
+      <a href="taxChart.html">Tax Chart</a>
+      <a href="notifications.html">Notifications</a>
+      <a href="security.html">Security</a>
+      <a href="about_us.html">About Us</a>
+      <a href="Help.html">Help</a>
+      <a href="signOut.html">Sign Out</a>
 		</div>
 
 		<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
